Description and CV Updated

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/L.K-CV.pdf')"
+            onclick="window.open('./assets/Lekë_Kelmendi_CV.pdf')"
           >
             Download CV
           </button>
@@ -101,11 +101,11 @@
           </div>
           <div class="text-container">
             <p>
-              I am Leke Kelmendi, a passionate Full Stack Developer dedicated to building modern, functional, and impactful applications. My journey in development is driven by a constant desire to learn and create solutions that make a real difference. With strong expertise in both front-end and back-end development, I craft complete systems that seamlessly connect user experience with robust data management and application architecture.
+              I am Lekë Kelmendi, a passionate Full Stack Developer dedicated to creating modern, functional, and impactful applications. My development journey is fueled by an insatiable drive to learn and deliver solutions that truly make a difference. With expertise spanning both front-end and back-end technologies, I specialize in building comprehensive systems that seamlessly integrate user-friendly interfaces with robust application architecture and data management.
 
-<br/><br/>My approach to programming is practical and quality-focused, where I pay close attention to every detail—from designing intuitive interfaces to implementing complex functionalities. Throughout my experience, I’ve worked with technologies like Next.js, TypeScript, React, Prisma, and ASP.NET Core, developing advanced platforms such as learning management systems, e-commerce applications, and real-time systems integrating modern tools like Stripe for payments and WebSockets for live communication.
+<br/><br/>I take a meticulous and quality-driven approach to programming, ensuring attention to detail at every step—from crafting intuitive and visually appealing designs to implementing complex features. My experience includes working with technologies such as Java, TypeScript, React, and .NET Core. I've developed advanced platforms like e-commerce applications, movie apps, job application systems, chat systems, and real-time applications, incorporating modern tools such as Stripe for payment processing and WebSockets for live communication.
 
-<br/><br/>For me, programming is more than just a job—it’s a creative process that combines logic and imagination to solve real-world problems. I’m committed to continuous improvement, staying up-to-date with the latest technologies, and delivering applications that are reliable, user-friendly, and provide lasting value.
+<br/><br/>Beyond programming, I am also passionate about expanding my knowledge across other areas of IT. Whether it's exploring new technologies, understanding systems administration, or diving into networking and cybersecurity, I am driven to grow as a well-rounded IT professional. For me, programming is not just a profession; it’s a creative and logical endeavor to solve real-world problems. I am committed to continuous growth, staying current with emerging technologies, and delivering solutions that are reliable, user-centric, and impactful.
 
 
 
