--- a/index.html
+++ b/index.html
@@ -101,13 +101,14 @@
           </div>
           <div class="text-container">
             <p>
-              I am Lekë Kelmendi, a passionate Full Stack Developer dedicated to creating modern, functional, and impactful applications. My development journey is fueled by an insatiable drive to learn and deliver solutions that truly make a difference. With expertise spanning both front-end and back-end technologies, I specialize in building comprehensive systems that seamlessly integrate user-friendly interfaces with robust application architecture and data management.
+              I am Lekë Kelmendi, a passionate Full Stack Developer with a strong foundation in programming concepts, problem-solving, and building scalable applications. With expertise in both front-end and back-end development, I specialize in crafting modern, responsive, and user-friendly web applications.
 
-<br/><br/>I take a meticulous and quality-driven approach to programming, ensuring attention to detail at every step—from crafting intuitive and visually appealing designs to implementing complex features. My experience includes working with technologies such as Java, TypeScript, React, and .NET Core. I've developed advanced platforms like e-commerce applications, movie apps, job application systems, chat systems, and real-time applications, incorporating modern tools such as Stripe for payment processing and WebSockets for live communication.
+<br/><br/>I have a deep understanding of HTML5, CSS3, JavaScript, and responsive web development, with hands-on experience using Tailwind CSS for efficient styling. On the front-end, I am proficient in React and have worked with component-based architectures to enhance performance and maintainability. My experience extends to RESTful APIs, ensuring seamless communication between client-side and server-side applications.
 
-<br/><br/>Beyond programming, I am also passionate about expanding my knowledge across other areas of IT. Whether it's exploring new technologies, understanding systems administration, or diving into networking and cybersecurity, I am driven to grow as a well-rounded IT professional. For me, programming is not just a profession; it’s a creative and logical endeavor to solve real-world problems. I am committed to continuous growth, staying current with emerging technologies, and delivering solutions that are reliable, user-centric, and impactful.
+<br/><br/>On the back-end, I work with .NET Core and Java, developing robust and scalable systems that handle complex business logic, authentication, and data management. I have also integrated Stripe for payment processing, WebSockets for real-time communication, and pagination for optimized data retrieval in my projects.
 
-
+<br/><br/>With a meticulous and detail-oriented approach, I ensure high-quality code, optimized performance, and a smooth user experience. I am fluent in English and Albanian, enabling effective communication in diverse professional environments.
+<br/><br/>For me, programming is more than just writing code—it’s about solving real-world problems and continuously improving. I am eager to take on new challenges, expand my knowledge, and contribute to impactful projects.
 
 
 
@@ -127,7 +128,7 @@
     </section>
     <section id="experience">
       <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
+      <h1 class="title">Skills</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -174,7 +175,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -195,8 +196,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
-                  <p>Basic</p>
+                  <h3>Tailwind</h3>
+                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
